week-7/day-1/apps.yaml
# ── ORDERS APP ─────────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: hashicorp/http-echo
          args:
            - "-text=Hello from Orders Service"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - port: 80
      targetPort: 5678
---
# ── PAYMENTS APP ───────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: hashicorp/http-echo
          args:
            - "-text=Hello from Payments Service"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - port: 80
      targetPort: 5678
